feat: add cell swagger and features